# usd-godot

./: .gitignore  CMakeLists.txt  build-usd-minimal.bat  build-usd-minimal.sh  build.bat  build.sh
.github/workflows/: build.yml
addons/godot-usd/: godot-usd.gdextension  plugin.cfg
src/: usd_export_settings.cpp
